Temporary build adjustments

--- a/SocialNetworkForBooks/SocialNetworkForBooks.Core/SocialNetworkForBooks.Core.csproj
+++ b/SocialNetworkForBooks/SocialNetworkForBooks.Core/SocialNetworkForBooks.Core.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SocialNetworkForBooks.Infrastructure\SocialNetworkForBooks.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
